add auth and check module

--- a/pages/user_center.html
+++ b/pages/user_center.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>个人中心</title>
+  <script src="./pages/util.js"></script>
   <script src="./pages/user_center.js"></script>
+  <title>个人中心</title>
   <style>
     /* 整体页面布局样式 */
     body {
@@ -102,9 +103,6 @@
       <button onclick="goToFinanceCenter()">财务中心</button>
     </div>
   </div>
-
-  <script>
-  </script>
 </body>
 
 </html>
