--- a/pages/login.html
+++ b/pages/login.html
@@ -42,7 +42,7 @@
 </head>
 
 <body>
-        <form action="http://localhost:8080/login_post" method="POST" enctype="application/x-www-form-urlencoded" >
+        <form id="loginForm" action="http://localhost:8080/login_post" method="POST" enctype="application/x-www-form-urlencoded" >
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" required/>
         <label for="password">Password:</label>
