--- a/pages/user_center.html
+++ b/pages/user_center.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>个人中心</title>
-  <script src="./pages/user_center.js"></script>
   <script src="./pages/util.js"></script>
+  <script src="./pages/user_center.js"></script>
   <style>
     body {
   font-family: Arial, sans-serif;
@@ -44,6 +44,9 @@ button:hover {
 </head>
 
 <body>
+    <div class="rectangle">
+        <p id="username">username</p>
+    </div>
   <div id="user_center"></div>
 </body>
 
