--- a/pages/register.html
+++ b/pages/register.html
@@ -47,8 +47,8 @@
   <form id="registrationForm">
     <label for="role">角色:
       <select id="role"  name="role" onchange="toggleFields()"  required>
-        <option value="家长">家长</option>
-        <option value="老师">老师</option>
+        <option value="student">家长</option>
+        <option value="teacher">老师</option>
       </select>
     </label>
     <label for="username">用户名（英文数字和下划线组成）:
