--- a/pages/user_center.html
+++ b/pages/user_center.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
 
@@ -41,6 +40,17 @@ button:hover {
   flex-wrap: wrap;
   justify-content: flex-start;
 }
+ .rectangle {
+      width: 300px;
+      height: 40px;
+      background-color: lightgray;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      border-radius: 10px;
+      box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+  }
   </style>
 </head>
 
@@ -51,55 +61,4 @@ button:hover {
   <div id="user_center"></div>
 </body>
 
-=======
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>个人中心</title>
-  <script src="./pages/user_center.js"></script>
-  <script src="./pages/util.js"></script>
-  <style>
-    body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-}
-
-button {
-  margin: 5px;
-  padding: 8px 12px;
-  border: none;
-  border-radius: 4px;
-  background-color: #007bff;
-  color: white;
-  cursor: pointer;
-}
-
-button:hover {
-  background-color: #0056b3;
-}
-
-.section {
-  margin: 20px;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-}
-
-.row {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-}
-  </style>
-</head>
-
-<body>
-  <div id="user_center"></div>
-</body>
-
->>>>>>> b82236154a35eef62f7f3f9906e1cc1c71d667a8
 </html>
