--- a/pages/project.html
+++ b/pages/project.html
@@ -113,7 +113,7 @@
 </head>
 
 <body>
-  <button class="back-button">返回课题列表</button>
+  <button class="back-button" id="back-usercenter-button">返回用户中心</button>
 
   <!-- 学生信息区域 -->
   <div class="section student-info">
