modify reset logic

--- a/pages/reset_pass.html
+++ b/pages/reset_pass.html
@@ -24,15 +24,17 @@
             <div class="form-row">
                 <label for="phone">手机号：</label>
                 <input type="text" id="phone">
-                <button class="send-code-btn">发送验证码</button>
+                <button id="sms_btn" class="send-code-btn">发送验证码</button>
             </div>
             <div class="form-row">
                 <label for="verify_code">验证码</label>
                 <input type="text" id="verify_code">
+                <div id="errorMessage" style="color: red; display: none;"></div>
             </div>
             <div class="form-row">
                 <label for="password">密码：</label>
                 <input type="password" id="password">
+                <div id="errorPassMessage" style="color: red; display: none;"></div>
             </div>
             <div class="form-row">
                 <label for="password-confirm">重复输入：</label>
